# cpp_chess

./: .gitignore  CMakeLists.txt  bcr.sh  build commands
include/engine/: camera.hpp  components.hpp  engine.hpp  game_objects.hpp  scene.hpp
include/game/: game.hpp  mainmenu.hpp
src/engine/: camera.cpp  game_objects.cpp  main.cpp
src/game/: game.cpp
